    with an upcoming POSIX standard. (patch provided by Thomas
    Petazzoni).
37. slposio.c,slstdio.c,slposdir.c: Do not include <sys/fcntl.h> if
    <fcntl.h> was included. (variation on a patch provided by Thomas
    Petazzoni).
38. slsh/: Move processing of the SLSH_PATH environment variable to
    slsh.rc.  Also, guess the slsh lib path based upon the location of
    the executable.

{{{ Previous Versions

Changes since 2.2.4
1. src/slarray.c: Try to find a suitable multiplier for range arrays
   to avoid roundoff errors.  Using the multiplier avoids the
   [1:10:0.001] from having the element 1.1260000000000001.
2. doc/tm/rtl/strops.tm: Correct typos in string_match documentation
   (Manfred Hanke).
3. modules/base64-module.c: Added a base64 encoder module.
4. modules/chksum-module.c: A module to compute md5, sha1, etc
   checksums.
5. Removed a few unused variables from the code.
6. Documentation updates and corrections by Agathoklis D. Hatzimanikas.
7. src/slarray.c: array_map enhanced to handle functions that return
   multiple values (based upon a patch from Manfred Hanke).
8. Documentation tweaks (Manfred Hanke).
9. src/slmath.c: Added sincos intrinsic (Manfred Hanke)
10. doc/tm/rtl/array.tm: Changed an example used in the array_map
    documentation.
11. More documentation updates/corrections (Agathoklis D. Hatzimanikas).
12. src/slarray.c: Tweaked the code that computes the
    array-range-multiplier to avoid agressive optimization by the
    compiler.
13. modules/rand.sl: The rand_int function was not working correctly
    (Thomas Dauser).
14. modules/test/test_rand.sl: Added a simple statistical test for
    rand_int (based upon an idea by Thomas Dauser).
15. modules/test/test_rand.sl: Corrected a typo introduced by #14.
16. src/slarray.c: #12 introduced a truncation error for some
    values involving the range multiplier.
17. autoconf/aclocal.m4: Change ncurses5w-config to ncursesw5-config
    (Gilles Espinasse).